gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: LoadBalancer
  selector:
    app: synergychat-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
