app-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
spec:
  gatewayClassName: app-gatewayclass
  listeners:
    - name: web
      hostname: synchat.internal
      port: 80
      protocol: HTTP
    - name: api
      hostname: synchatapi.internal
      port: 80
      protocol: HTTP
